Bug 499960 - qmmp crashes at startup with Breeze 6.3
Summary: qmmp crashes at startup with Breeze 6.3
Status: RESOLVED FIXED
Alias: None
Product: Breeze
Classification: Plasma
Component: QStyle (other bugs)
Version First Reported In: 6.3.0
Platform: Other Linux
: HI crash
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2025-02-13 07:10 UTC by Antonio Rojas
Modified: 2025-02-15 03:12 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.3.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Antonio Rojas 2025-02-13 07:10:57 UTC
qmmp crashes at startup when using Breeze style

#0  QTabWidget::documentMode (this=0x0) at /usr/src/debug/qt6-base/qtbase/src/widgets/widgets/qtabbar.h:187
#1  0x00007fffe8ba71e9 in Breeze::Style::tabWidgetTabBarRect (this=0x555555640920, option=0x7fffffffd360, widget=0x55555583e390)
    at /usr/src/debug/breeze/breeze-6.3.0/kstyle/breezestyle.cpp:2509
#2  Breeze::Style::tabWidgetTabBarRect (this=0x555555640920, option=0x7fffffffd360, widget=0x55555583e390)
    at /usr/src/debug/breeze/breeze-6.3.0/kstyle/breezestyle.cpp:2500
#3  Breeze::Style::subElementRect (this=0x555555640920, element=<optimized out>, option=0x7fffffffd360, widget=0x55555583e390)
    at /usr/src/debug/breeze/breeze-6.3.0/kstyle/breezestyle.cpp:1042
#4  0x00007fffe88adcfd in QSUiTabWidget::setUpLayout (this=this@entry=0x55555583e390)
    at /usr/src/debug/qmmp/qmmp-2.2.3/src/plugins/Ui/qsui/qsuitabwidget.cpp:230
#5  0x00007fffe88ae7f7 in QSUiTabWidget::readSettings (this=this@entry=0x55555583e390)
    at /usr/src/debug/qmmp/qmmp-2.2.3/src/plugins/Ui/qsui/qsuitabwidget.cpp:101
#6  0x00007fffe88b277c in QSUiTabWidget::QSUiTabWidget (this=<optimized out>, parent=<optimized out>, this=<optimized out>, parent=<optimized out>)
    at /usr/src/debug/qmmp/qmmp-2.2.3/src/plugins/Ui/qsui/qsuitabwidget.cpp:54
#7  0x00007fffe88bb647 in QSUiMainWindow::createWidgets (this=0x555555610020)
    at /usr/src/debug/qmmp/qmmp-2.2.3/src/plugins/Ui/qsui/qsuimainwindow.cpp:424
#8  QSUiMainWindow::QSUiMainWindow(QWidget*) [clone .constprop.0] (this=0x555555610020, parent=0x0)
    at /usr/src/debug/qmmp/qmmp-2.2.3/src/plugins/Ui/qsui/qsuimainwindow.cpp:91
#9  0x00007fffe88741f5 in QSUiFactory::create (this=<optimized out>) at /usr/src/debug/qmmp/qmmp-2.2.3/src/plugins/Ui/qsui/qsuifactory.cpp:40
#10 0x00005555555643b9 in QMMPStarter::startPlayer (this=this@entry=0x7fffffffe030) at /usr/src/debug/qmmp/qmmp-2.2.3/src/app/qmmpstarter.cpp:342
#11 0x00005555555666f8 in QMMPStarter::QMMPStarter (this=<optimized out>, this=<optimized out>)
    at /usr/src/debug/qmmp/qmmp-2.2.3/src/app/qmmpstarter.cpp:238
#12 0x000055555555bd33 in main (argc=<optimized out>, argv=0x7fffffffe298) at /usr/src/debug/qmmp/qmmp-2.2.3/src/app/main.cpp:89

The offending line was introduced in https://invent.kde.org/plasma/breeze/-/commit/75077627723af4069fed33e92fdcc535674dcf63
Comment 1 Bug Janitor Service 2025-02-13 10:21:21 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/breeze/-/merge_requests/522
Comment 2 Antonio Rojas 2025-02-13 18:53:21 UTC
Git commit 184e332fb0aa084da6bc4bace0ebc7d080df2f1a by Antonio Rojas.
Committed on 13/02/2025 at 10:18.
Pushed by arojas into branch 'master'.

Fix crash in some non-KDE apps

tabWidget can be a nullptr in some cases

M  +1    -1    kstyle/breezestyle.cpp

https://invent.kde.org/plasma/breeze/-/commit/184e332fb0aa084da6bc4bace0ebc7d080df2f1a
Comment 3 Antonio Rojas 2025-02-13 19:19:42 UTC
Git commit f7a14d6d170c17a2c17c386a4c88bfb020e29ff1 by Antonio Rojas.
Committed on 13/02/2025 at 18:53.
Pushed by arojas into branch 'Plasma/6.3'.

Fix crash in some non-KDE apps

tabWidget can be a nullptr in some cases


(cherry picked from commit 184e332fb0aa084da6bc4bace0ebc7d080df2f1a)

184e332f Fix crash in some non-KDE apps

Co-authored-by: Antonio Rojas <arojas@archlinux.org>

M  +1    -1    kstyle/breezestyle.cpp

https://invent.kde.org/plasma/breeze/-/commit/f7a14d6d170c17a2c17c386a4c88bfb020e29ff1