Fix crash in some non-KDE apps

tabWidget can be a nullptr in some cases

BUG: 499960